# -mlops-iris

./: .gitignore  DockerFile  README.md  app.py  pyproject.toml  requirements.txt  ruff.toml
.github/workflows/: ci.yml
Documentation/: MLOPS document.docx
api/: app.py  readme.md
models/: lightgbm_model.pkl  random_forest_model.pkl
notebooks/: load_preprocess.py  train_models.py
scripts/: deploy.sh
tests/: test_app.py
workflows/: ci-cd.yml
